--- a/etc/gnupg/gpg.conf
+++ b/etc/gnupg/gpg.conf
@@ -2,6 +2,7 @@
 # https://security.stackexchange.com/questions/84280/short-openpgp-key-ids-are-insecure-how-to-configure-gnupg-to-use-long-key-ids-i
 
 default-key $MYGPG
+no-secmem-warning
 no-greeting
 use-agent
 list-options show-uid-validity
