--- a/etc/afew/config
+++ b/etc/afew/config
@@ -19,7 +19,7 @@ sent_tag = sent
 [MailMover]
 folders = roland.puntaier@chello.at/INBOX roland.puntaier@gmail.com/INBOX puntaier.roland@gmail.com/INBOX dontbite71@gmail.com/INBOX
 rename = True
-roland.puntaier@chello.at/INBOX = 'from:linkedin':_/linkedin 'from:facebook':_/facebook 'from:tripadvisor':_/tripadvisor 'from:couchsurfing.com':_/couchsurfing 'to:stg@mur.at':_/stg 'from:bitbucket OR from:github':_/git 'to:python-':_/python 'to:sphinx-':_/sphinx 'to:vim-':_/vim 'to:arch-':_/arch 'to:boost.org':_/boost 'lfs-':_/LFS
+roland.puntaier@chello.at/INBOX = 'from:linkedin':_/linkedin 'from:facebook':_/facebook 'from:tripadvisor':_/tripadvisor 'from:couchsurfing.com':_/couchsurfing 'to:stg@mur.at':_/stg 'to:python-':_/python 'to:sphinx-':_/sphinx 'to:vim_dev or to:vim_use':_/vim 'to:arch-general or to:arch-dev-public':_/arch 'to:boost':_/boost 'to:lfs-dev':_/LFS 'from:bitbucket or from:github':_/git 
 roland.puntaier@gmail.com/INBOX = 'from:flixbus':_/flixbus 'from:freenode':_/freenode 'from:europeregistry':_/europeregistry 'from:google':_/google 'from:apple':_/apple 'from:gitlab':_/git 'from:booking':_/booking
 puntaier.roland@gmail.com/INBOX = 'from:google':_/google 'from:quora':_/quora
 dontbite71@gmail.com/INBOX = 'from:ryanairmail':_/ryanair 'from:apple':_/apple 'from:google':_/google 'from:quora':_/quora
@@ -33,7 +33,7 @@ folder_blacklist = roland.puntaier@chello.at/INBOX roland.puntaier@gmail.com/INB
 
 [Filter.1]
 message = untag new local mailboxes
-query = "tag:apple OR tag:arch OR tag:booking OR tag:boost OR tag:couchsurfing OR tag:europeregistry OR tag:facebook OR tag:flixbus OR tag:freenode OR tag:git OR tag:google OR tag:LFS OR tag:linkedin OR tag:python OR tag:quora OR tag:ryanair OR tag:sphinx OR tag:stg OR tag:tripadvisor OR tag:vim"
+query = "tag:_"
 tags = -new
 
 #[HeaderMatchingFilter.1]
