--- a/etc/sh/config
+++ b/etc/sh/config
@@ -18,7 +18,8 @@ fi
 export EDITOR='/usr/bin/vim'
 export VISUAL='/usr/bin/vim'
 export PAGER='/usr/bin/less'
-export BROWSER='/usr/bin/links'
+export BROWSER='/usr/bin/w3m'
+export MANPAGER='nvim +Man!'
 
 # Colours for less:
 LESS_TERMCAP_me="$(printf '\033[0m')"
