--- a/etc/afew/config
+++ b/etc/afew/config
@@ -22,9 +22,10 @@ sent_tag = sent
 # target folders are not automatically created (my notmuch post-new hook does it before calling afew)
 # rules must be XOR, else, if more rules apply, the SAME message will end in MORE targets
 [MailMover]
-folders = roland.puntaier@chello.at/INBOX roland.puntaier@gmail.com/INBOX puntaier.roland@gmail.com/INBOX dontbite71@gmail.com/INBOX
 # Gmail has mails in more folders, because it uses tags/labels: To avoid further duplication:
 rename = False
+# usrstuff:
+folders = roland.puntaier@chello.at/INBOX roland.puntaier@gmail.com/INBOX puntaier.roland@gmail.com/INBOX dontbite71@gmail.com/INBOX
 roland.puntaier@chello.at/INBOX = 'from:linkedin':roland.puntaier@chello.at/_/linkedin 'from:facebook':roland.puntaier@chello.at/_/facebook 'from:tripadvisor':roland.puntaier@chello.at/_/tripadvisor 'from:couchsurfing.com':roland.puntaier@chello.at/_/couchsurfing 'to:stg@mur.at':roland.puntaier@chello.at/_/stg 'to:python-':roland.puntaier@chello.at/_/python 'to:sphinx-':roland.puntaier@chello.at/_/sphinx 'to:vim_dev or to:vim_use':roland.puntaier@chello.at/_/vim 'to:arch-general or to:arch-dev-public':roland.puntaier@chello.at/_/arch 'to:boost':roland.puntaier@chello.at/_/boost 'to:lfs-dev':roland.puntaier@chello.at/_/LFS '(from:bitbucket or from:github) and not (to:vim_dev and not to:vim_use)':roland.puntaier@chello.at/_/git
 roland.puntaier@gmail.com/INBOX = 'from:flixbus':roland.puntaier@gmail.com/_/flixbus 'from:freenode':roland.puntaier@gmail.com/_/freenode 'from:europeregistry':roland.puntaier@gmail.com/_/europeregistry 'from:google':roland.puntaier@gmail.com/_/google 'from:apple':roland.puntaier@gmail.com/_/apple 'from:gitlab':roland.puntaier@gmail.com/_/git 'from:booking':roland.puntaier@gmail.com/_/booking
 puntaier.roland@gmail.com/INBOX = 'from:google':puntaier.roland@gmail.com/_/google 'from:quora':puntaier.roland@gmail.com/_/quora
@@ -34,6 +35,7 @@ dontbite71@gmail.com/INBOX = 'from:ryanairmail':dontbite71@gmail.com/_/ryanair '
 maildir_separator = /
 folder_lowercases = true
 # folder_explicit_list = folder1 folder2/sub2
+# usrstuff:
 folder_blacklist = roland.puntaier@chello.at/INBOX roland.puntaier@gmail.com/INBOX puntaier.roland@gmail.com/INBOX dontbite71@gmail.com/INBOX
 folder_transforms = roland.puntaier@chello.at:chello roland.puntaier@gmail.com:gmail1 puntaier.roland@gmail.com:gmail2 dontbite71@gmail.com:gmail3
 
