--- a/etc/weechat/irc.conf
+++ b/etc/weechat/irc.conf
@@ -129,7 +129,7 @@ local_hostname = ""
 msg_kick = ""
 msg_part = "WeeChat ${info:version}"
 msg_quit = "WeeChat ${info:version}"
-nicks = "rpuntaie,rpuntaie1,rpuntaie2,rpuntaie3,rpuntaie4"
+nicks = "WEENAME,WEENAME1,WEENAME2,WEENAME3,WEENAME4"
 nicks_alternate = on
 notify = ""
 password = ""
@@ -149,7 +149,7 @@ ssl_fingerprint = ""
 ssl_priorities = "NORMAL"
 ssl_verify = on
 usermode = ""
-username = "rpuntaie"
+username = "WEENAME"
 
 [server]
 freenode.addresses = "chat.freenode.net/7000"
@@ -172,7 +172,7 @@ freenode.sasl_fail
 freenode.autoconnect = on
 freenode.autoreconnect
 freenode.autoreconnect_delay
-freenode.nicks = "rpuntaie"
+freenode.nicks = "WEENAME"
 freenode.nicks_alternate
 freenode.username
 freenode.realname
