--- a/etc/cabal/config
+++ b/etc/cabal/config
@@ -1,3 +1,5 @@
+-- $CABAL_CONFIG points to this file
+--
 -- This is the configuration file for the 'cabal' command line tool.
 --
 -- The available configuration options are listed below.
