--- a/home/.ghc/ghci.conf
+++ b/home/.ghc/ghci.conf
@@ -1,1 +1,4 @@
+:set prompt "λ> "
+:set prompt-cont "λ| "
 :def spec \_ -> return ":reload\nhspec spec"
+:def hoogle \s -> return $ ":! hoogle --count=15 \"" ++ s ++ "\""
