shellcmdflag -i makes zsh zle warning in script calling system()

--- a/etc/git/config
+++ b/etc/git/config
@@ -19,6 +19,7 @@
   # usrstuff:
   name = Roland Puntaier
   email = roland.puntaier@gmail.com
+	signingkey = 43B86228
 [push]
   default = simple
 [gpg]
