processing; minor adaptation

--- a/etc/ranger/rifle.conf
+++ b/etc/ranger/rifle.conf
@@ -145,6 +145,7 @@ mime ^video, terminal, !X, has mplayer   = mplayer -- "$@"
 # Documents
 #-------------------------------------------
 #ext pdf, has llpp,     X, flag f = llpp "$@"
+ext pdf, has chromium,  X, flag f = chromium -- "$@"
 ext pdf, has zathura,  X, flag f = zathura -- "$@"
 ext epub, has zathura,  X, flag f = zathura -- "$@"
 ext pdf, has zathura,  X, flag f = zathura -c ~/.config/zathura/white -- "$@"
