--- a/etc/sh/config
+++ b/etc/sh/config
@@ -36,3 +36,6 @@ export LESS_TERMCAP_mb LESS_TERMCAP_md LESS_TERMCAP_me LESS_TERMCAP_se \
 export SSH_AUTH_SOCK="$(gpgconf --list-dirs agent-ssh-socket)"
 export GPG_TTY=$(tty)
 
+#make cmake generate compile_commands.json
+export CMAKE_EXPORT_COMPILE_COMMANDS=ON
+
