--- a/etc/git/config
+++ b/etc/git/config
@@ -151,3 +151,5 @@
   wch      = whatchanged -p --abbrev-commit --pretty=medium
   squash   = "!f(){ git reset --soft HEAD~${1} && git commit --edit -m\"$(git log --format=%B --reverse HEAD..HEAD@{1})\"; };f"
 # vim: ft=conf
+[init]
+	defaultBranch = main
