--- a/etc/weechat/irc.conf
+++ b/etc/weechat/irc.conf
@@ -178,7 +178,7 @@ freenode.username
 freenode.realname
 freenode.local_hostname
 freenode.usermode
-freenode.command
+freenode.command = "/msg nickserv identify WEENAME"
 freenode.command_delay
 freenode.autojoin = ""
 freenode.autorejoin
