--- a/etc/weechat/sec.conf
+++ b/etc/weechat/sec.conf
@@ -12,7 +12,7 @@
 [crypt]
 cipher = aes256
 hash_algo = sha256
-passphrase_file = ""
+passphrase_command = "pass show weechat/crypt"
 salt = on
 
 [data]
