--- a/etc/tmux/tmux.conf
+++ b/etc/tmux/tmux.conf
@@ -1,17 +1,36 @@
-# Configuration file for tmux.
+#done in install:
+#git clone https://github.com/tmux-plugins/tpm $XDG_STATE_HOME/tmux/plugins/tpm
+#prefix=C-a
+#r=I=Reload,
+#Escape=[=copy-mode,v=space=start,y=enter=copy
+#]=paste(Middle)
+#ssh to = Shift+Left from = Shift+Middle
+#|=vertical,_=horizontal
+#hjkl=select pane
+#c/,=new/rename window
+#Alt+j/k=pane,Ctrl+=swap; Alt+h/l=window, Ctrl+..=swap
+#><+-resize
+#J=join pane in window name,S=store pane in window name
+#m/M=mouse on/off
+# / (tmux-copycat)
+# Tab+fzf-select+Tab (extrakto)
+# y/Y line/pwd to clipboard (tmux-yank)
+# ~/msrc/cheatsheets/tmux.md
 
-###
+################################
+
 # General
-
 # Increase scrollback history
 set-option -g history-limit 10000
+# set prefix to Ctrl-a
+unbind C-b
+set -g prefix C-a
+# nvim compatibility - fix the cursor problem
+set -g -a terminal-overrides ',*:Ss=\E[%p1%d q:Se=\E[2 q'
 
-###
 # Appearance
-
 # Enable 256 colors
-set -g default-terminal "tmux-256color"
-
+set -g default-terminal "rxvt-256color";
 # Status bar
 set -g status-bg colour234
 set -g status-fg colour245
@@ -19,24 +38,23 @@ set -g status-left "#[fg=colour234,bg=green] #h #[default]"
 set -g window-status-format ' #I-#W '
 set -g window-status-current-format '#[fg=colour245,bg=colour237][#I-#W]#[default]'
 set -g status-right "#(~/.local/bin/loadavg) - %F #[bg=colour237] %H:%M "
+# quiet
+set -g visual-activity off
+set -g visual-bell off
+set -g visual-silence off
+set-window-option -g monitor-activity off
+set -g bell-action none
 
-###
 # Keybindings
-
 # Remove escape-key delay
 set -sg escape-time 0
-
-# Reload configutation
-#bind r source-file ~/.local/etc/tmux/tmux.conf; display-message "Config reloaded..."
-
-# Moving around windows
-bind-key -n M-h previous-window
-bind-key -n M-l next-window
-
+set -sg repeat-time 600
+# Reload configutation with <shift-i>
+unbind r
+bind r source-file "$XDG_CONFIG_HOME/tmux/tmux.conf" \; display "Reloaded tmux conf"
 # Split
-bind-key o split-window -v
-bind-key v split-window -h
-
+bind | split-window -h -c "#{pane_current_path}"
+bind _ split-window -v -c "#{pane_current_path}"
 # Moving around panes
 bind-key h select-pane -L
 bind-key j select-pane -D
@@ -44,18 +62,45 @@ bind-key k select-pane -U
 bind-key l select-pane -R
 bind-key -n M-j select-pane -t :.-
 bind-key -n M-k select-pane -t :.+
-
+bind-key -n C-M-j swap-pane -D
+bind-key -n C-M-k swap-pane -U
+bind-key -n M-h previous-window
+bind-key -n M-l next-window
+bind-key -n C-M-h swap-window -t -1\; select-window -t -1
+bind-key -n C-M-l swap-window -t +1\; select-window -t +1
 # Resize panes
+setw -g aggressive-resize on
 bind-key < resize-pane -L 10
 bind-key > resize-pane -R 10
 bind-key - resize-pane -D 10
 bind-key + resize-pane -U 10
-
 # Vi-style copy mode
 bind-key Escape copy-mode
 setw -g mode-keys vi
-
-# Scrolling
+bind-key -T copy-mode-vi v send-keys -X begin-selection
+# mouse mode
 set -g mouse on
-bind-key -n WheelUpPane select-pane -t= \; copy-mode -e \; send-keys -M
-bind-key -n WheelDownPane select-pane -t = \; send-keys -M
+bind m set -g mouse on \; display 'Mouse: ON'
+bind M set -g mouse off \; display 'Mouse: OFF'
+# join pane to window by window name
+bind J command-prompt -p "join pane from:"  "join-pane -s '%%'"
+bind S command-prompt -p "send pane to:"  "join-pane -t '%%'"
+
+# PLUGINS
+set-environment -g TMUX_PLUGIN_MANAGER_PATH "$XDG_STATE_HOME/tmux/plugins"
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-copycat'
+set -g @plugin 'laktak/extrakto'
+set -g @plugin 'tmux-plugins/tmux-yank'
+#set -g @plugin 'tmux-plugins/tmux-resurrect'
+#set -g @plugin 'tmux-plugins/tmux-continuum'
+#
+#set -g @resurrect-dir "$XDG_CACHE_HOME/tmux"
+#set -g @continuum-restore 'on'
+#
+#Initialize TMUX plugin manager
+#keep this line at the very bottom of tmux.conf
+run -b "$XDG_STATE_HOME/tmux/plugins/tpm/tpm"
+
+
