--- a/etc/tmux/tmux.conf
+++ b/etc/tmux/tmux.conf
@@ -88,9 +88,11 @@ bind S command-prompt -p "send pane to:"  "join-pane -t '%%'"
 
 # PLUGINS
 set-environment -g TMUX_PLUGIN_MANAGER_PATH "$XDG_STATE_HOME/tmux/plugins"
-# List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-copycat'
+set -g set-clipboard on
+set -g @extrakto_clip_tool_run "fg"
+set -g @extrakto_clip_tool "osc52"
 set -g @plugin 'laktak/extrakto'
 set -g @plugin 'tmux-plugins/tmux-yank'
 #set -g @plugin 'tmux-plugins/tmux-resurrect'
@@ -102,5 +104,6 @@ set -g @plugin 'tmux-plugins/tmux-yank'
 #Initialize TMUX plugin manager
 #keep this line at the very bottom of tmux.conf
 run -b "$XDG_STATE_HOME/tmux/plugins/tpm/tpm"
+
 
 
