--- a/etc/tmux/tmux.conf
+++ b/etc/tmux/tmux.conf
@@ -92,7 +92,7 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-copycat'
 set -g set-clipboard on
 set -g @extrakto_clip_tool_run "fg"
-set -g @extrakto_clip_tool "osc52"
+set -g @extrakto_clip_tool "yank.sh"
 set -g @plugin 'laktak/extrakto'
 set -g @plugin 'tmux-plugins/tmux-yank'
 #set -g @plugin 'tmux-plugins/tmux-resurrect'
