pass-git-helper org

--- a/etc/pass-git-helper/git-pass-mapping.ini
+++ b/etc/pass-git-helper/git-pass-mapping.ini
@@ -1,10 +1,6 @@
 [DEFAULT]
 username_extractor=entry_name
 
-[https://github.com/**]
-target=${protocol}_${host}/rpuntaie
-#https needs token
-
-#[*]
-#target=${host}/${username}
+[github.com*]
+target=https_${host}/rpuntaie
 
