--- a/etc/git/config
+++ b/etc/git/config
@@ -157,4 +157,4 @@
 [difftool "pandiff"]
 	cmd = pandiff \"$LOCAL\" \"$REMOTE\" -f rst -o pandiff.html
 [credential]
-	helper = "/home/roland/.local/bin/git_credentials_from_pass "
+	helper = /home/roland/.local/bin/git_credentials_from_pass $@
