--- a/etc/sh/config
+++ b/etc/sh/config
@@ -36,6 +36,9 @@ export LESS_TERMCAP_mb LESS_TERMCAP_md LESS_TERMCAP_me LESS_TERMCAP_se \
 export SSH_AUTH_SOCK="$(gpgconf --list-dirs agent-ssh-socket)"
 export GPG_TTY=$(tty)
 
+# git credential from pass
+export GIT_ASKPASS=$XDG_BIN_HOME'/git_credentials_from_pass $@'
+
 #make cmake generate compile_commands.json
 export CMAKE_EXPORT_COMPILE_COMMANDS=ON
 
