github token via shell script instead of git-git-helper

--- a/etc/git/config
+++ b/etc/git/config
@@ -156,3 +156,5 @@
 	defaultBranch = main
 [difftool "pandiff"]
 	cmd = pandiff \"$LOCAL\" \"$REMOTE\" -f rst -o pandiff.html
+[credential]
+	helper = /home/roland/.local/bin/git_credentials_from_pass $@
