--- a/etc/ranger/rifle.conf
+++ b/etc/ranger/rifle.conf
@@ -204,6 +204,9 @@ ext org, has emacs  = emacs -nw -- "$@"
 ext tar|gz, has tar = tar vvtf "$@" | "$PAGER"
 ext tar|gz, has tar = tar vvxf "$@"
 
+ext cbr, has mcomix = mcomix "$@"
+ext cbz, has mcomix = mcomix "$@"
+
 #-------------------------------------------
 # Misc
 #-------------------------------------------
