--- a/etc/weechat/urlgrab.conf
+++ b/etc/weechat/urlgrab.conf
@@ -24,6 +24,6 @@ historysize = 10
 localcmd = "open '%s'"
 method = "local"
 output_main_buffer = off
-remotecmd = "ssh -x localhost -i ~/.ssh/id_rsa -C "export DISPLAY=":0.0" &&  firefox '%s'""
+remotecmd = "ssh -x localhost -i ~/.ssh/id_rsa -C "export DISPLAY=":0.0" &&  chromium '%s'""
 time_format = "%H:%M:%S"
 url_log = "%h/urls.log"
