--- a/etc/sh/config
+++ b/etc/sh/config
@@ -18,7 +18,7 @@ fi
 export EDITOR='/usr/bin/nvim'
 export VISUAL='/usr/bin/nvim'
 export PAGER='/usr/bin/less'
-export BROWSER='/usr/bin/firefox'
+export BROWSER='/usr/bin/chromium'
 export MANPAGER='nvim +Man! -u /dev/null'
 
 # Colours for less:
