--- a/etc/gnupg/gpg.conf
+++ b/etc/gnupg/gpg.conf
@@ -1,7 +1,7 @@
 # https://www.gnupg.org/documentation/manuals/gnupg/GPG-Options.html#GPG-Options
 # https://security.stackexchange.com/questions/84280/short-openpgp-key-ids-are-insecure-how-to-configure-gnupg-to-use-long-key-ids-i
 
-default-key $MYGPG
+default-key $GPGKEY
 no-secmem-warning
 no-greeting
 use-agent
