--- a/etc/tmux/tmux.conf
+++ b/etc/tmux/tmux.conf
@@ -1,6 +1,5 @@
 #done in install:
 #git clone https://github.com/tmux-plugins/tpm $XDG_STATE_HOME/tmux/plugins/tpm
-#prefix=C-a
 #r=I=Reload,
 #Escape=[=copy-mode,v=space=start,y=enter=copy
 #]=paste(Middle)
@@ -22,9 +21,9 @@
 # General
 # Increase scrollback history
 set-option -g history-limit 10000
-# set prefix to Ctrl-a
-unbind C-b
-set -g prefix C-a
+## set prefix to Ctrl-a
+#unbind C-b
+#set -g prefix C-a
 # nvim compatibility - fix the cursor problem
 set -g -a terminal-overrides ',*:Ss=\E[%p1%d q:Se=\E[2 q'
 
