--- a/etc/sh/config
+++ b/etc/sh/config
@@ -1,5 +1,12 @@
 # vim: syntax=zsh
 
+if [[ "$(uname)" == "Darwin" ]] ; then
+  export XDG_CONFIG_HOME="${XDG_CONFIG_HOME:-$HOME/.config}"
+  export XDG_CACHE_HOME="${XDG_CACHE_HOME:-$HOME/.cache}"
+  export XDG_STATE_HOME="${XDG_STATE_HOME:-$HOME/.cache}"
+  export XDG_DATA_HOME="${XDG_DATA_HOME:-$HOME/.cache/share}"
+fi
+
 export HISTFILE="${XDG_STATE_HOME:-$HOME}/.sh_history"
 
 OS_NAME=''
@@ -38,9 +45,6 @@ export GPG_TTY=$(tty)
 
 #make cmake generate compile_commands.json
 export CMAKE_EXPORT_COMPILE_COMMANDS=ON
-
-#XDG_CONFIG_HOME="${XDG_CONFIG_HOME:-$HOMEDIR/.config}"
-CFGFILE=${CFGFILE:-$HOMEDIR/.config/$PKG.conf}
 
 export DISTCC_HOSTS='--randomize localhost red,cpp,lzo green,cpp,lzo blue,cpp,lzo'
 
