--- a/etc/sh/config
+++ b/etc/sh/config
@@ -5,6 +5,7 @@ if [[ "$(uname)" == "Darwin" ]] ; then
   export XDG_CACHE_HOME="${XDG_CACHE_HOME:-$HOME/.cache}"
   export XDG_STATE_HOME="${XDG_STATE_HOME:-$HOME/.cache}"
   export XDG_DATA_HOME="${XDG_DATA_HOME:-$HOME/.cache/share}"
+  eval "$(/opt/homebrew/bin/brew shellenv)"
 fi
 
 export HISTFILE="${XDG_STATE_HOME:-$HOME}/.sh_history"
