--- a/etc/sh/config
+++ b/etc/sh/config
@@ -13,6 +13,7 @@ if [[ "$(uname)" == "Darwin" ]] ; then
   export XDG_CACHE_HOME="${XDG_CACHE_HOME:-$HOME/.cache}"
   export XDG_STATE_HOME="${XDG_STATE_HOME:-$HOME/.cache}"
   export XDG_DATA_HOME="${XDG_DATA_HOME:-$HOME/.cache/share}"
+  export XDG_BIN_HOME="${XDG_BIN_HOME:-$HOME/bin}"
   eval "$(/opt/homebrew/bin/brew shellenv)"
 else
   export SSH_AUTH_SOCK="$(gpgconf --list-dirs agent-ssh-socket)"
