--- a/etc/ranger/rifle.conf
+++ b/etc/ranger/rifle.conf
@@ -134,6 +134,9 @@ mime ^video|audio, has vlc,      X, flag f = vlc -- "$@"
 mime ^video|audio, has totem,    X, flag f = totem -- "$@"
 mime ^video|audio, has totem,    X, flag f = totem --fullscreen -- "$@"
 
+ext mp4,      has mpv,      X, flag f = mpv --mute=yes -- "$@"
+ext mkv,      has mpv,      X, flag f = mpv --mute=yes -- "$@"
+
 #--------------------------------------------
 # Video without X:
 #-------------------------------------------
