--- a/etc/ranger/rifle.conf
+++ b/etc/ranger/rifle.conf
@@ -209,6 +209,8 @@ ext tar|gz, has tar = tar vvxf "$@"
 
 ext cbr, has mcomix = mcomix "$@"
 ext cbz, has mcomix = mcomix "$@"
+ext cbr, has evince = evince -- "$@"
+ext cbz, has evince = evince -- "$@"
 
 #-------------------------------------------
 # Misc
