--- a/etc/ranger/rifle.conf
+++ b/etc/ranger/rifle.conf
@@ -148,15 +148,14 @@ mime ^video, terminal, !X, has mplayer   = mplayer -- "$@"
 # Documents
 #-------------------------------------------
 #ext pdf, has llpp,     X, flag f = llpp "$@"
-ext pdf, has chromium,  X, flag f = chromium -- "$@"
-ext pdf, has zathura,  X, flag f = zathura -- "$@"
-ext epub, has zathura,  X, flag f = zathura -- "$@"
-ext pdf, has zathura,  X, flag f = zathura -c ~/.config/zathura/white -- "$@"
+ext pdf, has zathura,  X, flag f = zathura -c . -- "$@"
+ext pdf, has evince,   X, flag f = evince -- "$@"
+ext pdf, has chromium, X, flag f = chromium -- "$@"
+ext epub, has zathura, X, flag f = zathura -- "$@"
 ext pdf, has mupdf,    X, flag f = mupdf "$@"
 ext pdf, has mupdf-x11,X, flag f = mupdf-x11 "$@"
 ext pdf, has apvlv,    X, flag f = apvlv -- "$@"
 ext pdf, has xpdf,     X, flag f = xpdf -- "$@"
-ext pdf, has evince,   X, flag f = evince -- "$@"
 ext pdf, has atril,    X, flag f = atril -- "$@"
 ext pdf, has okular,   X, flag f = okular -- "$@"
 ext pdf, has epdfview, X, flag f = epdfview -- "$@"
