--- a/etc/newsboat/config
+++ b/etc/newsboat/config
@@ -1,21 +1,61 @@
 # Settings.
 article-sort-order date-desc
 download-path ~/Download
+download-retries 4
+download-timeout 10
 refresh-on-startup yes
-reload-threads 10
+auto-reload yes
+reload-time 120
+reload-threads 100
 show-keymap-hint no
 text-width 100
+prepopulate-query-feeds yes
+show-read-feeds no
+show-read-articles no
 
 # External programs.
 browser links
+# o to open embedded URL in browser 
 player mpv
 
 # Vim-like keybindings.
-bind-key k up
-bind-key j down
+unbind-key j
+unbind-key k
+unbind-key J
+unbind-key K
+bind-key j down feedlist
+bind-key k up feedlist
+bind-key j next articlelist
+bind-key k prev articlelist
+bind-key J next-feed articlelist
+bind-key K prev-feed articlelist
+bind-key j down article
+bind-key k up article
 bind-key ^B pageup
 bind-key ^F pagedown
 bind-key d delete-article
+bind-key j down
+bind-key k up
+bind-key l open
+bind-key h quit
+unbind-key g # bound to `sort` by default
+bind-key g home
+unbind-key G # bound to `rev-sort` by default
+bind-key G end
+unbind-key q
+bind-key q hard-quit
+unbind-key f
+bind-key f goto-url
+bind-key H prev-feed
+bind-key L next-feed
+bind-key ^H toggle-show-read-feeds
+bind-key SPACE macro-prefix
+bind-key b bookmark
+
+goto-next-feed no
+unbind-key C feedlist
+confirm-exit no
+cleanup-on-quit no
 
 # Colors.
 color listnormal        white black
@@ -25,3 +65,8 @@ color listfocus_unread  white color237 bold
 color info              color39 black
 color background        white black
 color article white black
+
+# Bookmarks
+bookmark-cmd ~/.newsbeuter/bookmark.sh
+bookmark-interactive no
+bookmark-autopilot yes
