--- a/etc/git/config
+++ b/etc/git/config
@@ -159,7 +159,7 @@
 [difftool "pandiff"]
 	cmd = pandiff \"$LOCAL\" \"$REMOTE\" -f rst -o pandiff.html
 [credential]
-	helper = /home/roland/.local/bin/git_credentials_from_pass $@
+	helper = '!pass-git-helper $@'
 [filter "lfs"]
 	smudge = git-lfs smudge -- %f
 	process = git-lfs filter-process
