--- a/etc/pass-git-helper/git-pass-mapping.ini
+++ b/etc/pass-git-helper/git-pass-mapping.ini
@@ -10,6 +10,9 @@ target=token_github.com/github2@zeniq.com
 [*github.com/rpuntaie*]
 target=token_github.com/rpuntaie
 
+[*github.com/getmail6*]
+target=token_github.com/rpuntaie
+
 [*github.com/rolandpuntaier*] 
 target=token_github.com/rolandpuntaier 
 
