--- a/share/systemd/user/mgitdaemon.service
+++ b/share/systemd/user/mgitdaemon.service
@@ -2,6 +2,6 @@
 Description=mgitdaemon
 After=network.target
 [Service]
-ExecStart=/home/roland/.local/bin/mgitdaemon
+ExecStart=/home/roland/.local/bin/mgitdaemon --start
 [Install]
 WantedBy=default.target
