--- a/etc/gnupg/gpg.conf
+++ b/etc/gnupg/gpg.conf
@@ -7,7 +7,7 @@ use-agent
 list-options show-uid-validity
 verify-options show-uid-validity
 keyid-format none
-keyserver hkp://keys.gnupg.net
+keyserver hkps://keyserver.ubuntu.com/
 fixed-list-mode
 charset utf-8
 with-fingerprint
