--- a/etc/pass-git-helper/git-pass-mapping.ini
+++ b/etc/pass-git-helper/git-pass-mapping.ini
@@ -17,7 +17,7 @@ target=token_github.com/rpuntaie
 target=token_github.com/rolandpuntaier 
 
 [*gitlab.vougee.gmbh*]
-target=gitlab.vougee.gmbh/roland.puntaier
+target=vougee/gitlab.vougee.gmbh/roland.puntaier
 
 [*g.fastprj.tech*]
 target=g.fastprj.tech/roland.puntaier
