--- a/etc/tmux/tmux.conf
+++ b/etc/tmux/tmux.conf
@@ -21,6 +21,7 @@
 # General
 # Increase scrollback history
 set-option -g history-limit 10000
+set-option -g lock-command vlock
 ## set prefix to Ctrl-a
 #unbind C-b
 #set -g prefix C-a
