--- a/etc/pass-git-helper/git-pass-mapping.ini
+++ b/etc/pass-git-helper/git-pass-mapping.ini
@@ -13,6 +13,18 @@ target=token_github.com/rpuntaie
 [*github.com/getmail6*]
 target=token_github.com/rpuntaie
 
+[*github.com/chcko*]
+target=token_github.com/rpuntaie
+
+[*github.com/econnet*]
+target=token_github.com/rpuntaie
+
+[*github.com/pyfca*]
+target=token_github.com/rpuntaie
+
+[*github.com/rstdoc*]
+target=token_github.com/rpuntaie
+
 [*github.com/rolandpuntaier*] 
 target=token_github.com/rolandpuntaier 
 
