--- a/etc/sh/config
+++ b/etc/sh/config
@@ -63,7 +63,9 @@ export R_LIBS_USER="${XDG_LIB_HOME}/R"
 export NPM_CONFIG_USERCONFIG="${XDG_CONFIG_HOME}/npm/npmrc"
 export NMBGIT="${XDG_CACHE_HOME}/notmuch/nmbug"
 export NOTMUCH_CONFIG="${XDG_CONFIG_HOME}/notmuch/notmuchrc"
-export MAIL="${HOME}/Mail"
+export MYIP="$(ip -4 addr | grep -oP '(?<=inet\s)\d+(\.\d+){3}' | tail -1)"
+[[ "$HOST" == "passivecool" ]] && export MAIL="${HOME}/Mail"
+[[ "$HOST" == "medioncase" ]] && export MAIL="${HOME}/mnt/passivecool/Mail"
 export MAILDIR="${HOME}/Mail"
 export NPM_CONFIG_PREFIX="${XDG_STATE_HOME}/npm"
 export PASSWORD_STORE_DIR="${HOME}/.password-store"
