--- a/etc/sh/config
+++ b/etc/sh/config
@@ -65,7 +65,7 @@ export NMBGIT="${XDG_CACHE_HOME}/notmuch/nmbug"
 export NOTMUCH_CONFIG="${XDG_CONFIG_HOME}/notmuch/notmuchrc"
 export MYIP="$(ip -4 addr | grep -oP '(?<=inet\s)\d+(\.\d+){3}' | tail -1)"
 [[ "$HOST" == "passivecool" ]] && export MAIL="${HOME}/Mail"
-[[ "$HOST" == "medioncase" ]] && export MAIL="${HOME}/mnt/passivecool/Mail"
+# [[ "$HOST" == "medioncase" ]] && export MAIL="${HOME}/mnt/passivecool/Mail"
 export MAILDIR="${HOME}/Mail"
 export NPM_CONFIG_PREFIX="${XDG_STATE_HOME}/npm"
 export PASSWORD_STORE_DIR="${HOME}/.password-store"
