rm trash; new tools

--- a/etc/ranger/rc.conf
+++ b/etc/ranger/rc.conf
@@ -1,7 +1,7 @@
 # Image preview
 set show_hidden true
 
-map DD shell gio trash %s
+map DD shell trash %s
 
 #as alt+1,... is used for xmonad
 map g1 tab_open 1
