--- a/etc/tmux/tmux.conf
+++ b/etc/tmux/tmux.conf
@@ -22,6 +22,7 @@
 # Increase scrollback history
 set-option -g history-limit 10000
 set-option -g lock-command vlock
+# set is the alias for set-option
 ## set prefix to Ctrl-a
 #unbind C-b
 #set -g prefix C-a
@@ -30,7 +31,11 @@ set -g -a terminal-overrides ',*:Ss=\E[%p1%d q:Se=\E[2 q'
 
 # Appearance
 # Enable 256 colors
-set -g default-terminal "rxvt-256color";
+# set -g default-terminal "rxvt-256color";
+# set -g set-clipboard on
+# stray characters get inserted, trying this:
+set -g default-terminal "screen"
+set -s set-clipboard off
 # Status bar
 set -g status-bg colour234
 set -g status-fg colour245
@@ -90,7 +95,6 @@ bind S command-prompt -p "send pane to:"  "join-pane -t '%%'"
 set-environment -g TMUX_PLUGIN_MANAGER_PATH "$XDG_STATE_HOME/tmux/plugins"
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-copycat'
-set -g set-clipboard on
 set -g @extrakto_clip_tool_run "fg"
 set -g @extrakto_clip_tool "yank"
 set -g @plugin 'laktak/extrakto'
