--- a/etc/pass-git-helper/git-pass-mapping.ini
+++ b/etc/pass-git-helper/git-pass-mapping.ini
@@ -25,11 +25,11 @@ target=token_github.com/rpuntaie
 [*github.com/rstdoc*]
 target=token_github.com/rpuntaie
 
-[*github.com/rolandpuntaier*] 
-target=token_github.com/rolandpuntaier 
+[*github.com/rolandpuntaier*]
+target=token_github.com/rolandpuntaier
 
 [*gitlab.vougee.gmbh*]
-target=vougee/gitlab.vougee.gmbh/roland.puntaier
+target=token_gitlab.vougee.gmbh/rolanddevtoken
 
 [*g.fastprj.tech*]
 target=g.fastprj.tech/roland.puntaier
