--- a/etc/sh/config
+++ b/etc/sh/config
@@ -32,7 +32,7 @@ export VISUAL='/usr/bin/nvim'
 export PAGER='/usr/bin/less'
 #export BROWSER='/usr/bin/chromium'
 export BROWSER='/usr/bin/firefox'
-export MANPAGER='nvim +Man! -u /dev/null'
+# export MANPAGER='nvim +Man! -u /dev/null'
 
 # Colours for less:
 LESS_TERMCAP_me="$(printf '\033[0m')"
