--- a/etc/sh/config
+++ b/etc/sh/config
@@ -27,12 +27,12 @@ if [ "$TERM" = "rxvt-unicode-256color" ]; then
 fi
 
 # Default:
-export EDITOR='/usr/bin/nvim'
-export VISUAL='/usr/bin/nvim'
+export EDITOR='/usr/bin/vim'
+export VISUAL='/usr/bin/vim'
 export PAGER='/usr/bin/less'
 #export BROWSER='/usr/bin/chromium'
 export BROWSER='/usr/bin/firefox'
-# export MANPAGER='nvim +Man! -u /dev/null'
+# export MANPAGER='vim +Man! -u /dev/null'
 
 # Colours for less:
 LESS_TERMCAP_me="$(printf '\033[0m')"
